2018-05-31 Release 4.8
	- refactor the hxl.validation module for better testing and
	  maintainability
	- add a new default schema with useful default tests
	- allow multiple tag patterns (comma-separated) for #valid_tag in
	  a HXL schema
	- add a spelling validation test
	- add a numeric-outlier validation test
	- refactor CacheFilter to preserve row numbers
	- add ability to generate a JSON-style validation report easily
	  via hxl.validate()
	- new requirement: python-io-wrapper
	- RowFilter (with_rows, without_rows) no longer ignores empty
	  cells; that will occasionally give some different results
	- when multiple columns match a row query, it will succeed with at
	  least one success
	- fixed a bug parsing "is" row queries

2018-05-11 Release 4.7.1
	- hotfix for bug in date parsing

2018-04-30 Release 4.7
	- remove obsolete Python2 compatibility code
	- added source_row_number and source_column_number to support validation
	- add wildcard support to tag patterns, so that we can use
	  patterns like "*" or "*+f-children"
	- revamped date handling to support partial dates like "2018-01"
	  or "2018", and also special notation like "2018W05" or "2018Q1"
	- add min and max methods to hxl.model.Dataset
	- HXL validation reports a validation error when a #valid_value+url is not usable
	- HXL validation now reports proper column
	- HXL validation now accepts all parseable date formats
	- HXL validation now has a #valid_unique constraint (single value or
	  compound key)
	- HXL validation now has a #valid_correlation constraint (e.g. make sure
	  that #adm1 and #adm2 are always consistent for any given value
	  of #adm3)
	- HXL validation can now try to infer datatypes without explicit rules
	- HXL validation now calculates edit distance and suggests the
	  closest match when failing validation against a list
	- HXL validation can now test for irregular whitespace using
  	  #valid_value+whitespace