@@ -45,6 +45,11 @@ import sys
 if sys.version_info < (3,):
     raise RuntimeError("libhxl requires Python 3 or higher")
 
+__version__="4.8"
+"""Module version number
+see https://www.python.org/dev/peps/pep-0396/
+"""
+
 # Flatten out common items for easier access
 
 class HXLException(Exception):
